code samurai hackathon 2019

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,8 +1,11 @@
 <header>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <nav>
-        <a href="/" class="brand-logo center">
-            <i class="material-icons">library_music</i>My Cool Music  Trending App
-        </a>
+        <div>
+            <a href="/" class="brand-logo center">
+                Subscribe To Pewdiepie <i><img src="gamepad-controller.png" style='height:45px;width:45px;margin-top:10px'/></i>
+            </a>
+        </div>
     </nav>
 </header>
 <main class="container">
