--- a/views/addpage.ejs
+++ b/views/addpage.ejs
@@ -8,11 +8,11 @@
 
     <form method="post" action="saveitem">
 
-
-
-
-
-
+        Name: <input type="text" name="name" required/>
+        Developer: <input type="text" name="developer" required/>
+        Link: <input type="url" name="link" required/>
+        Genre: <input type="text" name="genre" required/>
+        Price(dollars): <input type="number" step="any" name="price" required/>
         Added by: <input type="text" name="addedBy" value="<%=loginName%>" readonly/>
 
         <button class="btn" type="submit" name="submit">Save Item</button>
