--- a/views/addpage.ejs
+++ b/views/addpage.ejs
@@ -13,8 +13,8 @@
         Link: <input type="url" name="link" required/>
         Genre: <input type="text" name="genre" required/>
         Price(dollars): <input type="number" step="any" name="price" required/>
+        Date: <input type="date" name="date" required/>
         Added by: <input type="text" name="addedBy" value="<%=loginName%>" readonly/>
-
         <button class="btn" type="submit" name="submit">Save Item</button>
 
     </form>
