--- a/views/listpage.ejs
+++ b/views/listpage.ejs
@@ -36,13 +36,13 @@
                 <%= item.addedBy %>
             </td>
             <td>
-
+                <%= item.likes %>
             </td>
             <td>
-                <i class="fa fa-heart"></i>
+                <a href="/like?name=<%= item.name %>"><i class="material-icons" >favorite</i></a><a href="/delete?name=<%= item.name %>"><i class="material-icons">delete</i></a>
             </td>
             <td>
-                <%= date %>
+                <%= item.date %>
             </td>
 
         </tr>
